src/pages/fr/v1.18.0/plugins/vuex.mdx
---
title: "VueX"
metaTitle: "VueX"
metaDescription: "Plugin VueX pour OpenReplay."
---
import Aside from '~/components/Aside.astro'

Ce plugin vous permet de capturer les mutations/l'état de `VueX` et de les inspecter ultérieurement lors de la relecture des enregistrements de session. Cela est très utile pour comprendre et corriger les problèmes.

<Aside type="tip">
  Nous proposons également un tutoriel détaillé sur l'utilisation du plugin VueX pour capturer l'état de votre application avec cette bibliothèque ; vous pouvez le consulter [ici](/tutorials/vuex).
</Aside>



## Installation

```bash
npm i @openreplay/tracker-vuex
```

## Utilisation

Initialisez le paquet `@openreplay/tracker` comme d'habitude et chargez-y le plugin. Placez ensuite le plugin généré dans le champ `plugins` de votre store.

### Si votre site web est une Single Page Application (SPA)

```js
import Vuex from 'vuex'
import OpenReplay from '@openreplay/tracker';
import trackerVuex from '@openreplay/tracker-vuex';
//...
const tracker = new OpenReplay({
  projectKey: PROJECT_KEY,
  // ... options 
});
```

### Si votre application web est rendue côté serveur (SSR)

Suivez l'exemple ci-dessous si votre application est en SSR. Assurez-vous que `tracker.start()` est appelé une fois l'application démarrée (dans `useEffect` ou `componentDidMount`).
Consultez la section [Dépannage](troubleshooting/js-errors) si vous rencontrez des erreurs avec le SSR.

```js
import Vuex from 'vuex'
import OpenReplay from '@openreplay/tracker/cjs';
import trackerVuex from '@openreplay/tracker-vuex/cjs';
//...
const tracker = new OpenReplay({
  projectKey: PROJECT_KEY,
  // ... options
});
```

#### Avec une version de tracker-vuex supérieure à 4.0.0

```js
// check list of available options below
const vuexPlugin = tracker.use(trackerVuex(<options>)); 

// add a name to your store, optional (will be randomly generated otherwise)
const storeTracker = vuexPlugin('STORE NAME') 

const store = createStore({
  state,
  mutations,
  plugins: [storeTracker]
})
```

#### Avec une version de tracker-vuex inférieure à 3.0.0

```js
// check list of available options below
const vuexPlugin = tracker.use(trackerVuex(<options>));  

tracker.start();

const store = new Vuex.Store({
  //...
  plugins: [vuexPlugin],
});
```

## Options

Vous pouvez personnaliser le comportement du plugin à l'aide d'options afin d'assainir vos données. Elles sont similaires à celles du plugin standard `createLogger`.

```js
trackerVuex({
  filter (mutation, state) {
    // returns `true` if a mutation should be logged
    // `mutation` is a `{ type, payload }`
    return mutation.type !== "aBlacklistedMutation";
  },
  transformer (state) {
    // transforms the state before logging it.
    // for example return only a specific sub-tree
    return state.subTree;
  },
  mutationTransformer (mutation) {
    // mutations are logged in the format of `{ type, payload }`
    // we can format it any way we want.
    return mutation.type;
  },
})
```

## Tutoriel

Si vous cherchez un exemple pratique d'utilisation de ce plugin pour capturer les changements d'état dans vos relectures de session, consultez [notre tutoriel détaillé ici](/tutorials/vuex).

## Des questions ?

Vous avez des difficultés à configurer ce plugin ? Rejoignez notre [Slack](https://slack.openreplay.com) ou consultez notre [Forum](https://forum.openreplay.com) et obtenez de l'aide auprès de notre communauté.
